// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InternalMain component page descriptors with app 1`] = `
<InternalMain
  path="/"
>
  <section
    className="pf-l-page__main-section pf-c-page__main-section"
    page-type="some-app"
  >
    Something
  </section>
</InternalMain>
`;

exports[`InternalMain component page descriptors with dynamic path and params 1`] = `
<InternalMain
  params={
    Object {
      "ID": "1",
    }
  }
  path="/another/:ID"
>
  <section
    className="pf-l-page__main-section pf-c-page__main-section"
    data-id="1"
    page-type="some-app-another"
  >
    Something
  </section>
</InternalMain>
`;

exports[`InternalMain component page descriptors with path 1`] = `
<InternalMain
  path="/another/url/parts"
>
  <section
    className="pf-l-page__main-section pf-c-page__main-section"
    page-type="some-app-another-url-parts"
  >
    Something
  </section>
</InternalMain>
`;

exports[`InternalMain component should render correctly without app 1`] = `
<InternalMain>
  <section
    className="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    Something
  </section>
</InternalMain>
`;
